--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,21 @@
-sox (14.4.1-0+git20120306-1) UNRELEASED; urgency=low
+sox (14.4.1-0+git20120311-1) UNRELEASED; urgency=low
 
   * Git Version.
+  * [debian/sox.install, debian/libsox-dev.install]:
+    - Removed brace expensions fixing lintian warning
+      "brace-expansion-in-debhelper-config-file".
+  * [debian/control]:
+    - Added versioned dependency to format libraries, fixes upgrades in some
+      use cases.
+    - Added MP2 to short description of libsox-fmt-mp3.
+  * [debian/copyright]:
+    - Long due update, thanks to Ulrich Klauer <ulrich@chirlu.de> for pointing
+      this out.
+    - libst is now libsox.
+    - FFT code is no longer Audacity's GPL code.
+    - Updated link to LGPL license to 2.1.
 
- -- Pascal Giard <evilynux@gmail.com>  Sat, 06 Mar 2012 23:00:01 -0500
+ -- Pascal Giard <evilynux@gmail.com>  Sun, 11 Mar 2012 23:36:11 -0500
 
 sox (14.4.0-1) unstable; urgency=low
 
