Fix input length calculation
Calculating the total length of the input wasn't done correctly for
parallel combine methods when input files had different numbers of
channels, or when merging.

For the sequence combine method, it is not possible to determine the
total length, so use SOX_UNKNOWN_LEN in that case.

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,11 @@ File formats:
 
   o Fix pipe file-type detection regression. (robs)
 
+Other bug fixes:
+
+  o Fix input length calculation for combine methods other than
+    concatenate. (Ulrich Klauer)
+
 
 sox-14.4.0	2012-03-04
 ----------
