MAUD format write fixes
The MAUD format wrote a wrong FORM chunk size and didn't pad the data
chunk to an even number of bytes, as required by the IFF
specification. The problems were reported by Carl Eric Codère.

This resolves tracker item 3507927.

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ sox-14.4.1	20xx-xx-xx
 File formats:
 
   o Fix pipe file-type detection regression. (robs)
+  o MAUD write fixes. [3507927] (Carl Eric Codere and Ulrich Klauer)
 
 Other bug fixes:
 
