--- a/sox.1
+++ b/sox.1
@@ -2364,7 +2364,7 @@ frequency of about 75 Hz.
 .SP
 This effect supports the \fB\-\-plot\fR global option.
 .TP
-\fBladspa\fR \fBmodule\fR [\fBplugin\fR] [\fBargument\fR...]
+\fBladspa\fR [\fB-r\fR] \fBmodule\fR [\fBplugin\fR] [\fBargument\fR...]
 Apply a LADSPA [5] (Linux Audio Developer's Simple Plugin API) plugin.
 Despite the name, LADSPA is not Linux-specific, and a wide range of
 effects is available as LADSPA plugins, such as cmt [6] (the Computer
@@ -2372,9 +2372,14 @@ Music Toolkit) and Steve Harris's plugin collection [7]. The first
 argument is the plugin module, the second the name of the plugin (a
 module can contain more than one plugin) and any other arguments are
 for the control ports of the plugin. Missing arguments are supplied by
-default values if possible. Only plugins with at most one audio input
-and one audio output port can be used.  If found, the environment variable
-LADSPA_PATH will be used as search path for plugins.
+default values if possible. Only plugins which do not modify the channel
+count may be used. The
+.B \-r
+(repeat) option allows cloning a mono plugin to handle multi-channel
+effects chains.
+If found, the environment variable LADSPA_PATH will be used as search
+path for plugins.
+
 .TP
 \fBloudness\fR [\fIgain\fR [\fIreference\fR]]
 Loudness control\*msimilar to the
