--- a/sox.1
+++ b/sox.1
@@ -880,7 +880,7 @@ If the \fB\-\-multi-threaded\fR option is given however then SoX
 will process audio channels for most multi-channel
 effects in parallel on hyper-threading/multi-core architectures. This
 may reduce processing time, though sometimes it may be necessary to use
-this option in conjuction with a larger buffer size than is the default
+this option in conjunction with a larger buffer size than is the default
 to gain any benefit from multi-threaded processing
 (e.g. 131072; see \fB\-\-buffer\fR above).
 .TP
@@ -3122,7 +3122,7 @@ effect (above):
 .EX
    rate 2k spectrogram \-X 200 \-Z \-10 \-w kaiser
 .EE
-Options are also avaliable to control the appearance (colour-set,
+Options are also available to control the appearance (colour-set,
 brightness, contrast, etc.) and filename of the spectrogram; e.g. with
 .EX
    sox my.wav \-n spectrogram \-m \-l \-o print.png
