spectrogram: fix default length regression
If the input length is not known, make 8 seconds the default length of
a spectrogram again. Previously, an empty spectrogram would be
generated.

This was a regression in 14.4.0 compared to 14.3.2, caused by changing
the "unknown length" indicator from 0 to SOX_UNKNOWN_LEN; spectrogram
still tested for 0.

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,11 @@ Audio device drivers:
   o Check whether pulseaudio is available before choosing it as
     default. (robs)
 
+Effects:
+
+  o Restore 8 seconds default for spectrogram, if the input length is
+    not known. (Ulrich Klauer)
+
 Other bug fixes:
 
   o Fix input length calculation for combine methods other than
