--- a/sox.1
+++ b/sox.1
@@ -3242,8 +3242,10 @@ Set the image title\*mtext to display above the spectrogram.
 .IP \fB\-c\ \fItext\fR
 Set (or clear) the image comment\*mtext to display below and to the
 left of the spectrogram.
-.IP \fB\-o\ \fItext\fR
+.IP \fB\-o\ \fIfile\fR
 Name of the spectrogram output PNG file, default `spectrogram.png'.
+If `-' is given, the spectrogram will be sent to standard output
+(stdout).
 .RE
 .TP
 \ 
