Documentation spelling alignment: centre -> center
In the man page, change the single occurence of "centre" frequency to
"center" frequency, as the AE spelling is used in all other places
except for this one.

--- a/sox.1
+++ b/sox.1
@@ -1460,7 +1460,7 @@ Where applicable, default values for optional parameters are shown in parenthesi
 The following parameters are used with, and have the same meaning for,
 several effects:
 .TP
-\fIcentre\fR[\fBk\fR]
+\fIcenter\fR[\fBk\fR]
 See
 .IR frequency .
 .TP
