spectrogram: fix memory leak
Free the (rather large) memory blocks used to store the per-channel
spectrogram data for all channels. Previously, only those of the first
channel were freed upon stopping the effect.

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@ Internal improvements:
 
   o Speed optimization for effects that operate on channels
     independently. (Ulrich Klauer)
+  o Fix memory leaks. (Ulrich Klauer)
 
 
 sox-14.4.1	20xx-xx-xx
