sox.1: fix a typo

--- a/sox.1
+++ b/sox.1
@@ -1308,7 +1308,7 @@ for a list of supported file types.
 These options specify whether the byte-order of the audio data is,
 respectively, `little endian', `big endian', or the opposite to that of
 the system on which SoX is being used.  Endianness applies only to data
-encoded as floating-pont, or as signed or unsigned integers of 16 or
+encoded as floating-point, or as signed or unsigned integers of 16 or
 more bits.  It is often necessary to specify one of these options for
 headerless files, and sometimes necessary for (otherwise)
 self-describing files.  A given endian-setting option may be ignored
