spectrogram: allow sample counts for -d and -S
Interpret sample counts given for spectrogram's -d and -S options
correctly. Previously, they were accepted syntactically (because
lsx_parsesamples() is used for parsing the argument), but always
interpreted according to a sample rate of 100 kHz; i.e., -d 20000s meant
0.2 seconds even when the sample rate was actually 10 kHz.

Not really a bug though, because the possibility to specify samples
wasn't documented.

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,7 +31,7 @@ Effects:
   o 'Rate' now much faster in many cases.  (robs)
   o Allow sending spectrograms to stdout. (Ulrich Klauer)
   o Allow mixing time and sample-count arguments for the delay
-    effect. (Ulrich Klauer)
+    effect, and for spectrogram -S and -d. (Ulrich Klauer)
 
 Internal improvements:
 
