Extend time specification syntax
Allow time specifications to be chained, adding/subtracting the specified
amounts; e.g.,
  trim =2:00-100s =2:00+100s
will cut 200 samples centered around 2:00. This is especially useful when
combining time-based and sample-based specifications, as well as for
scripts that are given audio positions as parameters and need to add an
offset to those.

It is also possible for such a chained time specification to comprise
more than two parts, as in `2:00-12+13s-1:23'. No immediate use case
presents itself for that, but the code cost to implement this feature is
negligible.

--- a/sox.1
+++ b/sox.1
@@ -1496,6 +1496,11 @@ legal and equivalent to each other.
 Specifies the number of samples directly, as in `8000s'.  For large sample
 counts, \fIe notation\fR is supported: `1.7e6s' is the same as `1700000s'.
 .PP
+Time specifications can also be chained with \fB+\fR or \fB\-\fR into a new
+time specification where the right part is added to or subtracted from the
+left, respectively: `3:00\-200s' means two hundred samples before the three
+minute mark.
+.SP
 To see if SoX has support for an optional effect, enter
 .B sox \-h
 and look for its name under the list: `EFFECTS'.
